docs: updated swagger docs
